Fix logo size spacing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 
 h1, h2 {
     text-transform: uppercase;
-    font-size: 27px;
+    font-size: 22px;
     letter-spacing: 2px;
     color: #252525;
 }
